# SimLab

./: .gitignore  LICENSE  README.md  README.rst  package-lock.json  package.json  pyproject.toml  requirements.txt
api/: index.py
api/static/: script.js  styles.css
api/templates/: base.html  index.html  render_memory.html
core/: controller.py  instruction_set.py  memory.py  operations.py
core8085/: basic_memory.py  controller.py  flags.py  instruction_set.py  memory.py  opcodes.py  operations.py
