[build-system]
requires = [
         "setuptools",
         "setuptools_scm",
         "wheel"
         ]
build-backend = 'setuptools.build_meta'

[project]
name = "SimLab"
version = "0.0.0"
description = "8051 and 8085 microprocessor simulator"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "Flask>=2.0.2",
    "rich>=11.2.0",
]

[tool.black]
line-length=120
